# axosyslog

./: .gitignore  configure.ac
cmake/Modules/: FindLibMHD.cmake
docker/: axosyslog-builder.dockerfile  axosyslog.dockerfile
docker/apkbuild/axoflow/axosyslog/: APKBUILD
lib/: CMakeLists.txt  cfg-grammar-internal.c  cfg-grammar-internal.h  cfg-grammar.y  cfg-lexer.c  cfg-lexer.h  logscheduler.c  logsource.c  logwriter.c  logwriter.h
lib/filterx/: CMakeLists.txt  Makefile.am  expr-comparison.c  expr-condition.c  expr-function.c  expr-getattr.c  expr-literal.c  expr-regexp.c  expr-regexp.h  expr-setattr.c  expr-switch.c  expr-variable.c  filterx-allocator.c  filterx-allocator.h  filterx-config.c  filterx-config.h  filterx-env.h  filterx-eval.h  filterx-expr.c  filterx-expr.h  filterx-globals.c  filterx-grammar.ym  filterx-object.h  filterx-pipe.c  filterx-ref.c  filterx-scope.h  filterx-stashed-object.c  func-cache-json-file.c  object-dict.c  object-list.c  object-primitive.c  object-string.c  object-string.h
lib/filterx/tests/: test_filterx_eval.c
lib/logmsg/: logmsg.c  logmsg.h
lib/logproto/: logproto-auto-server.c  logproto-client.c  logproto-client.h  logproto-server.h  logproto-text-client.c  logproto-text-client.h
lib/logthrdest/: logthrdestdrv.c
lib/scanner/csv-scanner/: csv-scanner.c
lib/scanner/csv-scanner/tests/: test_csv_scanner.c
lib/timeutils/: misc.c  misc.h
lib/transport/: transport-stack.c  transport-stack.h
lib/transport/tests/: CMakeLists.txt  test_transport_factory.c  test_transport_haproxy.c
modules/affile/: logproto-file-writer.c
modules/afsocket/: afinet-dest.c  afsocket-dest.c  afsocket-grammar.ym  transport-mapper-inet.c
modules/http/: http-grammar.ym
modules/http-adapters/: CMakeLists.txt  Makefile.am  http-adapters-grammar.ym  http-adapters-plugin.c  splunk-hec-auth.c  splunk-hec-auth.h
modules/http-adapters/tests/: CMakeLists.txt  Makefile.am  test_splunk_hec_auth.c
modules/http-source/: CMakeLists.txt  Makefile.am  http-server-listener.c  http-server-listener.h  http-source-config.c  http-source-config.h  http-source-grammar.ym  http-source-parser.c  http-source-parser.h  http-source-plugin.c  http-source-signals.h  http-source.c  http-source.h  httpsource-grammar.ym  httpsource-listener.c  httpsource-listener.h  httpsource-parser.c  httpsource-parser.h  httpsource-plugin.c  httpsource.c  httpsource.h
modules/mqtt/: mqtt-grammar.ym
news/: feature-http-source-request-signals.md  feature-http-source-tls.md  feature-http-source.md
scl/: CMakeLists.txt  Makefile.am
scl/splunk-hec/: splunk-hec.conf
tests/copyright/: policy
tests/light/functional_tests/source_drivers/http_source/: test_http_source.py
